Connected text to dictionary

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -3,5 +3,106 @@
     "h-i1": "We want to thank you for showing interest in our practice!",
     "h-i2" : "Whether you are a new or an established patient, we want to answer any questions you may have regarding Dr. Adam Sergiwa, his practice, or about your child's health.",
     "h-i3" : "Lincoln Pediatrics is an established practice with an exprienced, skilled, and professional staff. At Lincoln Pediatrics, we are dedicated to the health and well being from newborns to the age of 21.",
-    "h-i4" : "Please feel free to browse through our website and if you have any questions or concerns please contact our offices!"
+    "h-i4" : "Please feel free to browse through our website and if you have any questions or concerns please contact our offices!",
+    "about" : "About Us",
+    "a-q" : "On behalf of Lincoln Pediatrics, I want you to know that you and your children are our highest priority.  We want your experience to be pleasant and fulfilling, and we will do all we can to make this so.  I want to thank you once more for choosing us as your health care provider.",
+    "a-i1" : "Dr. Sergiwa is a well-established pediatrician, bringing with him extensive experience and our skills in pediatrics, newborns. adolescents, and young adults.",
+    "a-i2" : "He gained much of his experience during his intensive training in United Kingdom and USA at Columbia University in Manhattan, NY.  During his work experience here in LaPorte and at one of the largest university hospitals in London, he worked as lead clinician and educator in pediatric diabetes, endocrinology and eating disorders.",
+    "a-i3" : "Dr. Sergiwa is Board certified by the American Board of Pediatrics and by the Royal college of Physicians in United Kingdom.  Dr. Sergiwa earned a degree in Pediatrics and Neonatal Intensive Care from the Royal Collage of Pediatrics and Child Health in United Kingdom.  Dr. Sergiwa is also a Diplomat in Child Health from the Royal College of Glasgow, Scotland and he earned a Master's degree in Pediatric Health. ",
+    "affil" : "Hospital Affiliations",
+    "a-b1" : "Dr. Sergiwa is an active staff member at the following hospitals",
+    "awards" : "Awards",
+    "home" : "Home",
+    "services" : "Services",
+    "education" : "Education",
+    "immunization" : "Immunization",
+    "lincoln" : "Lincoln Pediatrics",
+    "loc" : "Our Locations",
+    "mc" : "Michigan City Office",
+    "lp" : "LaPorte Office",
+    "mcAddr" : "9856 W. County Road 400 N.",
+    "mcSt" : "Michigan City, IN 46360",
+    "mcPh" : "219-878-0882",
+    "lpAddr" : "414 Lincolnway ",
+    "lpSt" : "La Porte, IN 46350",
+    "lpPh" : "219-326-5400",
+    "hours" : "Our offices are open to serve you Monday through Saturday.  We accept all patients and almost all insurances.  We will make every effort to see you the same day or schedule you an appointment within 24 hours.",
+    "s-i" : "We offer many services for you and your child. Take a look at our services:",
+    "emergency" : "Emergencies and Hospitalization",
+    "911" : "For any emergency after hours, call the office phone and the answering service will page Dr. Sergiwa.  If your child experiences any of the following symptoms, go to the nearest Emergency Room or call 911:",
+    "visits" : "Well-Routine Visits",
+    "s-info" : "Information on visits in our office",
+    "s-focus" : "Focus of the visit",
+    "s-i1": "New borns are scheduled to be seen in our office after a few days from the hospital discharge. In the first two years of your baby's life, you will be scheduled reoutine-well visits on a regular basis.",
+    "s-i2": "For well visits we do allocate 20 minutes that you will spend with the doctor and the nurses. Please be prepared to stay longer if immunizations are required at the time of visit.",
+    "s-f1": "We ask you to be prepared and organized with any questions you may have about your baby for our physician. We will focus on the physical exam, discussing developmental milestones, and anticipatory guidance.",
+    "s-f2": "If any concerns and medical issues arise that need extra time, a follow-up visit will be made for you. This way other scheduled patients will not experience delays.",
+    "s-1": "Newborn Care & Examinations",
+    "s-2": "Well Child Check-Up/Physical Examination",
+    "s-3": "Sports Physicals, Camp Physicals, College Physicals",
+    "s-4": "Immunizations",
+    "s-5": "Wart removal",
+    "s-6": "Nebulizer Treatment",
+    "s-7": "Laboratory Testing - Strep, Urine, RSV, and Influenza Testing",
+    "s-8": "Consultations",
+    "s-9": "ADHD" ,
+    "s-10": "Allergy & Asthma" ,
+    "s-11": "Behavioral Evaluation",
+    "s-12": "Developmental screening",
+    "s-13": "Asthma Testing (Spirometry)",
+    "s-14": "Tongue-clipping (Frenotomy)",
+    "s-15": "Complementaary Prenatal Visits",
+    "s-16": "Nutritional Counseling",
+    "s-17": "Suture removal",
+    "s-18": "Ear Piercing",
+    "e-11": "Overdose",
+    "e-12": "Poisoning",
+    "e-13": "High fevers",
+    "e-14": "Unconsciousness",
+    "e-15": "Difficulty Breathing",
+    "e-16": "Convulsions",
+    "e-21": "Bleeding that won't stop",
+    "e-22": "Severe pain",
+    "e-23": "Severe injuries",
+    "e-24": "Animal Bite",
+    "e-25": "Small babies with fevers",
+    "e-26": "Pregnancy labor",
+    "cdc": "The CDC (Centers for Disease Control and Prevention) provides information on vaccines and their schedule.  Please check out the following links for more information:",
+    "links": "Here are additional links for more information!",
+    "schedules": "Schedules",
+    "vaccines": "Vaccines",
+    "tylenol": "Tylenol Doseage",
+    "fever": "Taminophen for Fever and Pain",
+    "downloads": "Please use the following links for additional information on health topics relating to you and your child:",
+    "f-1": "Baby Bottle Tooth Decay Prevention",
+    "f-2": "Bullying - How to Help the Victim",
+    "f-3": "Car Safety Seats for Infants and Children",
+    "f-4": "Care of the very small Premature Infant",
+    "f-5": "Clothing Needs for New Baby",
+    "f-6": "First Weeks Home with a Newborn",
+    "f-7": "Formula (Bottle) Feeding",
+    "f-8": "Healthy Diet Teen Version",
+    "f-9": "Healthy Diet",
+    "f-10": "Newborn Skin Care Normal",
+    "f-11": "Reducing a Child's Aggressive Behavior",
+    "f-12": "Puberty for Boys",
+    "f-13": "Puberty for Girls",
+    "f-14": "Sibling Quarrels",
+    "f-15": "Sibling Rivalry toward a Newborn",
+    "f-16": "Sleep Position for Young Infants",
+    "f-17": "Smoke Carbon Monoxide Detectors",
+    "f-18": "Solid (Strained) Foods",
+    "f-19": "Tips for Car Travel After the First Year",
+    "f-20": "Well Child Care at 4 months",
+    "f-21": "Well Child Care at 6 months",
+    "f-22": "Well Child Care at 9 months",
+    "f-23": "Well Child Care at 12 months",
+    "f-24": "Well Child Care at 15 months",
+    "f-25": "Well Child Care at 18 months",
+    "f-26": "Well Child Care at 2 Years",
+    "f-27": "Well Child Care at 3 Years",
+    "f-28": "Well Child Care at 5 Years",
+    "f-29": "Well Child Care at 6 Years",
+    "f-30": "Well Child Care at 8 Years",
+    "f-31": "Well Child Care at 10 Years"
 }
