--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -1,4 +1,108 @@
 {
-    "h-welcome" : "¡Bienvenidos a nuestra práctica!",
-    "h-i1" : "¡Queremos agradecerle por mostrar interés en nuestra práctica!"
+    "h-welcome": "¡Bienvenido a nuestra práctica!",
+    "h-i1": "¡Queremos agradecerle por mostrar interés en nuestra práctica!",
+    "h-i2": "Ya sea que sea un paciente nuevo o establecido, queremos responder cualquier pregunta que pueda tener sobre el Dr. Adam Sergiwa, su práctica o sobre la salud de su hijo",
+    "h-i3": "Lincoln Pediatrics es una práctica establecida con un personal experimentado, capacitado y profesional. En Lincoln Pediatrics, nos dedicamos a la salud y el bienestar desde los recién nacidos hasta los 21 años",
+    "h-i4": "¡No dude en navegar por nuestro sitio web y si tiene alguna pregunta o inquietud, comuníquese con nuestras oficinas!",
+    "about": "Acerca de nosotros",
+    "a-q": "\"En nombre de Lincoln Pediatrics, quiero que sepa que usted y sus hijos son nuestra máxima prioridad. Queremos que su experiencia sea placentera y satisfactoria, y haremos todo lo posible para que esto sea así. Quiero para agradecerle una vez más por elegirnos como su proveedor de atención médica.\"",
+    "a-i1": "El Dr. Sergiwa es un pediatra bien establecido, que trae consigo una amplia experiencia y nuestras habilidades en pediatría, recién nacidos, adolescentes y adultos jóvenes",
+    "a-i2": "Obtuvo gran parte de su experiencia durante su formación intensiva en el Reino Unido y Estados Unidos en la Universidad de Columbia en Manhattan, NY. Durante su experiencia laboral aquí en LaPorte y en uno de los hospitales universitarios más grandes de Londres, trabajó como médico principal y educador en diabetes pediátrica, endocrinología y trastornos alimentarios ",
+    "a-i3": "El Dr. Sergiwa está certificado por la Junta Americana de Pediatría y por el Real Colegio de Médicos del Reino Unido. El Dr. Sergiwa obtuvo un título en Pediatría y Cuidados Intensivos Neonatales del Royal Collage of Pediatrics and Child Health en Reino Unido. El Dr. Sergiwa también es Diplomático en Salud Infantil del Royal College of Glasgow, Escocia y obtuvo una Maestría en Salud Pediátrica. ",
+    "affil": "Afiliaciones hospitalarias",
+    "a-b1": "El Dr. Sergiwa es un miembro activo del personal de los siguientes hospitales",
+    "awards": "Premios",
+    "home": "Hogar",
+    "services": "Servicios",
+    "education": "Educación",
+    "immunization": "Inmunización",
+    "lincoln": "Lincoln Pediatrics",
+    "loc": "Nuestras ubicaciones",
+    "mc": "Oficina de la ciudad de Michigan",
+    "lp": "Oficina LaPorte",
+    "mcAddr": "9856 W. County Road 400 N.",
+    "mcSt": "Michigan City, IN 46360",
+    "mcPh": "219-878-0882",
+    "lpAddr": "414 Lincolnway",
+    "lpSt": "La Porte, IN 46350",
+    "lpPh": "219-326-5400",
+    "hours": "Nuestras oficinas están abiertas para atenderlo de lunes a sábado. Aceptamos a todos los pacientes y casi todos los seguros. Haremos todo lo posible para atenderlo el mismo día o programar una cita dentro de las 24 horas",
+    "s-i": "Ofrecemos muchos servicios para usted y su hijo. Eche un vistazo a nuestros servicios:",
+    "emergency": "Emergencias y hospitalización",
+    "911": "Para cualquier emergencia fuera del horario de atención, llame al teléfono de la oficina y el servicio de contestador llamará al Dr. Sergiwa. Si su hijo experimenta alguno de los siguientes síntomas, vaya a la sala de emergencias más cercana o llame al 911:",
+    "visits": "Visitas rutinarias",
+    "s-info": "Información sobre visitas en nuestra oficina",
+    "s-focus": "Foco de la visita",
+    "s-i1": "Los recién nacidos están programados para ser atendidos en nuestro consultorio unos días después del alta hospitalaria. En los primeros dos años de vida de su bebé, se le programarán visitas de rutina de rutina",
+    "s-i2": "Para las visitas de control, asignamos 20 minutos que pasará con el médico y las enfermeras. Esté preparado para quedarse más tiempo si se requieren vacunas en el momento de la visita",
+    "s-f1": "Le pedimos que esté preparada y organizada con cualquier pregunta que pueda tener sobre su bebé para nuestro médico. Nos enfocaremos en el examen físico, discutiremos los hitos del desarrollo y la orientación anticipatoria",
+    "s-f2": "Si surge alguna inquietud o problema médico que requiera tiempo adicional, se le realizará una visita de seguimiento. De esta manera, otros pacientes programados no experimentarán demoras",
+    "s-1": "Atención y exámenes para recién nacidos",
+    "s-2": "Control del niño sano / examen físico",
+    "s-3": "Exámenes físicos para deportes, exámenes físicos para el campamento, exámenes físicos para la universidad",
+    "s-4": "Vacunas",
+    "s-5": "Eliminación de verrugas",
+    "s-6": "Tratamiento con nebulizador",
+    "s-7": "Pruebas de laboratorio: pruebas de estreptococos, orina, VSR e influenza",
+    "s-8": "Consultas",
+    "s-9": "TDAH",
+    "s-10": "Alergia y asma",
+    "s-11": "Evaluación del comportamiento",
+    "s-12": "Evaluación del desarrollo",
+    "s-13": "Prueba de asma (espirometría)",
+    "s-14": "Corte de lengua (frenotomía)",
+    "s-15": "Visitas prenatales complementarias",
+    "s-16": "Asesoramiento nutricional",
+    "s-17": "Retirada de suturas",
+    "s-18": "Piercing de oreja",
+    "e-11": "Sobredosis",
+    "e-12": "Envenenamiento",
+    "e-13": "Fiebre alta",
+    "e-14": "Inconsciencia",
+    "e-15": "Dificultad para respirar",
+    "e-16": "Convulsiones",
+    "e-21": "Sangrado que no se detiene",
+    "e-22": "Dolor severo",
+    "e-23": "Lesiones graves",
+    "e-24": "Mordedura de animal",
+    "e-25": "Bebés pequeños con fiebre",
+    "e-26": "Trabajo de parto durante el embarazo",
+    "cdc": "Los CDC (Centros para el Control y la Prevención de Enfermedades) proporcionan información sobre las vacunas y su calendario. Consulte los siguientes enlaces para obtener más información:",
+    "links": "¡Aquí hay enlaces adicionales para obtener más información!",
+    "schedules": "Horarios",
+    "vaccines": "Vacunas",
+    "tylenol": "Dosis de Tylenol",
+    "fever": "Taminophen para fiebre y dolor",
+    "downloads": "Utilice los siguientes enlaces para obtener información adicional sobre temas de salud relacionados con usted y su hijo:",
+    "f-1": "Prevención de caries de biberón",
+    "f-2": "Bullying: cómo ayudar a la víctima",
+    "f-3": "Asientos de seguridad para automóviles para bebés y niños",
+    "f-4": "Cuidado del bebé prematuro muy pequeño",
+    "f-5": "Necesidades de ropa para el recién nacido",
+    "f-6": "Primeras semanas en casa con un recién nacido",
+    "f-7": "Alimentación con fórmula (biberón)",
+    "f-8": "Versión para adolescentes con una dieta saludable",
+    "f-9": "Dieta saludable",
+    "f-10": "Cuidado de la piel del recién nacido normal",
+    "f-11": "Reducir el comportamiento agresivo de un niño",
+    "f-12": "Pubertad para niños",
+    "f-13": "Pubertad para niñas",
+    "f-14": "Peleas entre hermanos",
+    "f-15": "Rivalidad entre hermanos hacia un recién nacido",
+    "f-16": "Posición para dormir para bebés pequeños",
+    "f-17": "Detectores de humo de monóxido de carbono",
+    "f-18": "Alimentos sólidos (colados)",
+    "f-19": "Consejos para viajar en automóvil después del primer año",
+    "f-20": "Cuidado infantil sano a los 4 meses",
+    "f-21": "Cuidado del niño sano a los 6 meses",
+    "f-22": "Cuidado infantil sano a los 9 meses",
+    "f-23": "Cuidado infantil sano a los 12 meses",
+    "f-24": "Cuidado del niño sano a los 15 meses",
+    "f-25": "Cuidado de niño sano a los 18 meses",
+    "f-26": "Cuidado infantil sano a los 2 años",
+    "f-27": "Cuidado del niño sano a los 3 años",
+    "f-28": "Cuidado del niño sano a los 5 años",
+    "f-29": "Cuidado del niño sano a los 6 años",
+    "f-30": "Cuidado del niño sano a los 8 años",
+    "f-31": "Cuidado del niño sano a los 10 años"
 }
