NPM Update, bio change, and CSS fixes

--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -9,6 +9,8 @@
     "a-i1": "El Dr. Sergiwa es un pediatra bien establecido, que trae consigo una amplia experiencia y nuestras habilidades en pediatría, recién nacidos, adolescentes y adultos jóvenes",
     "a-i2": "Obtuvo gran parte de su experiencia durante su formación intensiva en el Reino Unido y Estados Unidos en la Universidad de Columbia en Manhattan, NY. Durante su experiencia laboral aquí en LaPorte y en uno de los hospitales universitarios más grandes de Londres, trabajó como médico principal y educador en diabetes pediátrica, endocrinología y trastornos alimentarios ",
     "a-i3": "El Dr. Sergiwa está certificado por la Junta Americana de Pediatría y por el Real Colegio de Médicos del Reino Unido. El Dr. Sergiwa obtuvo un título en Pediatría y Cuidados Intensivos Neonatales del Royal Collage of Pediatrics and Child Health en Reino Unido. El Dr. Sergiwa también es Diplomático en Salud Infantil del Royal College of Glasgow, Escocia y obtuvo una Maestría en Salud Pediátrica. ",
+    "a-i4" : "Victoria Sergiwa es la directora administrativa de Lincoln Pediatrics. Tiene más de 40 años de experiencia laboral y ha sido parte de la práctica por más de 15 años.",
+    "a-i5" : "Supervisa al personal, dirige la parte administrativa de la práctica y ayuda a que la práctica funcione sin problemas. Victoria se asegura de que su hijo sea visto de manera oportuna y reciba la mejor atención posible.",
     "affil": "Afiliaciones hospitalarias",
     "a-b1": "El Dr. Sergiwa es un miembro activo del personal de los siguientes hospitales",
     "awards": "Premios",
