--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -7,8 +7,10 @@
     "about" : "About Us",
     "a-q" : "\"On behalf of Lincoln Pediatrics, I want you to know that you and your children are our highest priority.  We want your experience to be pleasant and fulfilling, and we will do all we can to make this so.  I want to thank you once more for choosing us as your health care provider.\"",
     "a-i1" : "Dr. Sergiwa is a well-established pediatrician, bringing with him extensive experience and our skills in pediatrics, newborns. adolescents, and young adults.",
-    "a-i2" : "He gained much of his experience during his intensive training in United Kingdom and USA at Columbia University in Manhattan, NY.  During his work experience here in LaPorte and at one of the largest university hospitals in London, he worked as lead clinician and educator in pediatric diabetes, endocrinology and eating disorders.",
-    "a-i3" : "Dr. Sergiwa is Board certified by the American Board of Pediatrics and by the Royal college of Physicians in United Kingdom.  Dr. Sergiwa earned a degree in Pediatrics and Neonatal Intensive Care from the Royal Collage of Pediatrics and Child Health in United Kingdom.  Dr. Sergiwa is also a Diplomat in Child Health from the Royal College of Glasgow, Scotland and he earned a Master's degree in Pediatric Health. ",
+    "a-i2" : "He gained much of his experience during his intensive training in United Kingdom and USA at Columbia University in Manhattan, NY.  During his work experience here in La Porte and at one of the largest university hospitals in London, he worked as lead clinician and educator in pediatric diabetes, endocrinology and eating disorders.",
+    "a-i3" : "Dr. Sergiwa is Board certified by the American Board of Pediatrics and by the Royal college of Physicians in United Kingdom.  Dr. Sergiwa earned a degree in Pediatrics and Neonatal Intensive Care from the Royal Collage of Pediatrics and Child Health in United Kingdom.  Dr. Sergiwa is also a Diplomat in Child Health from the Royal College of Glasgow, Scotland and he earned a Master's degree in Pediatric Health.",
+    "a-i4" : "Victoria Sergiwa is the Administrative Director at Lincoln Pediatrics. She has more than 40 years of work experience and has been a part of the practice for over 15 years.",
+    "a-i5" : "She supervises the staff, runs the administrative side of the practice, and helps the practice runs smoothly. Victoria ensures that your child will be seen in a timely manner and will recieve the best care possible.",
     "affil" : "Hospital Affiliations",
     "a-b1" : "Dr. Sergiwa is an active staff member at the following hospitals",
     "awards" : "Awards",
@@ -72,7 +74,7 @@
     "schedules": "Schedules",
     "vaccines": "Vaccines",
     "tylenol": "Tylenol Doseage",
-    "fever": "Taminophen for Fever and Pain",
+    "fever": "Acetaminophen for Fever and Pain",
     "downloads": "Please use the following links for additional information on health topics relating to you and your child:",
     "f-1": "Baby Bottle Tooth Decay Prevention",
     "f-2": "Bullying - How to Help the Victim",
