Removed La Porte Office

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -3,7 +3,7 @@
     "h-i1": "We want to thank you for showing interest in our practice!",
     "h-i2" : "Whether you are a new or an established patient, we want to answer any questions you may have regarding Dr. Adam Sergiwa, his practice, or about your child's health.",
     "h-i3" : "Lincoln Pediatrics is an established practice with an exprienced, skilled, and professional staff. At Lincoln Pediatrics, we are dedicated to the health and well being from newborns to the age of 21.",
-    "h-i4" : "Please feel free to browse through our website and if you have any questions or concerns please contact our offices!",
+    "h-i4" : "Please feel free to browse through our website and if you have any questions or concerns please contact our office!",
     "about" : "About Us",
     "a-q" : "\"On behalf of Lincoln Pediatrics, I want you to know that you and your children are our highest priority.  We want your experience to be pleasant and fulfilling, and we will do all we can to make this so.  I want to thank you once more for choosing us as your health care provider.\"",
     "a-i1" : "Dr. Sergiwa is a well-established pediatrician, bringing with him extensive experience and our skills in pediatrics, newborns. adolescents, and young adults.",
@@ -19,7 +19,7 @@
     "education" : "Education",
     "immunization" : "Immunization",
     "lincoln" : "Lincoln Pediatrics",
-    "loc" : "Our Locations",
+    "loc" : "Our Location",
     "mc" : "Michigan City Office",
     "lp" : "LaPorte Office",
     "mcAddr" : "9856 W. County Road 400 N.",
@@ -28,7 +28,7 @@
     "lpAddr" : "414 Lincolnway ",
     "lpSt" : "La Porte, IN 46350",
     "lpPh" : "219-326-5400",
-    "hours" : "Our offices are open to serve you Monday through Saturday.  We accept all patients and almost all insurances.  We will make every effort to see you the same day or schedule you an appointment within 24 hours.",
+    "hours" : "Our office is open to serve you Monday through Saturday.  We accept all patients and almost all insurances.  We will make every effort to see you the same day or schedule you an appointment within 24 hours.",
     "s-i" : "We offer many services for you and your child. Take a look at our services:",
     "emergency" : "Emergencies and Hospitalization",
     "911" : "For any emergency after hours, call the office phone and the answering service will page Dr. Sergiwa.  If your child experiences any of the following symptoms, go to the nearest Emergency Room or call 911:",
