--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -3,7 +3,7 @@
     "h-i1": "¡Queremos agradecerle por mostrar interés en nuestra práctica!",
     "h-i2": "Ya sea que sea un paciente nuevo o establecido, queremos responder cualquier pregunta que pueda tener sobre el Dr. Adam Sergiwa, su práctica o sobre la salud de su hijo",
     "h-i3": "Lincoln Pediatrics es una práctica establecida con un personal experimentado, capacitado y profesional. En Lincoln Pediatrics, nos dedicamos a la salud y el bienestar desde los recién nacidos hasta los 21 años",
-    "h-i4": "¡No dude en navegar por nuestro sitio web y si tiene alguna pregunta o inquietud, comuníquese con nuestras oficinas!",
+    "h-i4": "¡No dude en navegar por nuestro sitio web y si tiene alguna pregunta o inquietud, comuníquese con nuestras oficina!",
     "about": "Acerca de nosotros",
     "a-q": "\"En nombre de Lincoln Pediatrics, quiero que sepa que usted y sus hijos son nuestra máxima prioridad. Queremos que su experiencia sea placentera y satisfactoria, y haremos todo lo posible para que esto sea así. Quiero para agradecerle una vez más por elegirnos como su proveedor de atención médica.\"",
     "a-i1": "El Dr. Sergiwa es un pediatra bien establecido, que trae consigo una amplia experiencia y nuestras habilidades en pediatría, recién nacidos, adolescentes y adultos jóvenes",
@@ -19,7 +19,7 @@
     "education": "Educación",
     "immunization": "Inmunización",
     "lincoln": "Lincoln Pediatrics",
-    "loc": "Nuestras ubicaciones",
+    "loc": "Nuestras ubicación",
     "mc": "Oficina de la ciudad de Michigan",
     "lp": "Oficina LaPorte",
     "mcAddr": "9856 W. County Road 400 N.",
@@ -28,7 +28,7 @@
     "lpAddr": "414 Lincolnway",
     "lpSt": "La Porte, IN 46350",
     "lpPh": "219-326-5400",
-    "hours": "Nuestras oficinas están abiertas para atenderlo de lunes a sábado. Aceptamos a todos los pacientes y casi todos los seguros. Haremos todo lo posible para atenderlo el mismo día o programar una cita dentro de las 24 horas",
+    "hours": "Nuestras oficina están abiertas para atenderlo de lunes a sábado. Aceptamos a todos los pacientes y casi todos los seguros. Haremos todo lo posible para atenderlo el mismo día o programar una cita dentro de las 24 horas",
     "s-i": "Ofrecemos muchos servicios para usted y su hijo. Eche un vistazo a nuestros servicios:",
     "emergency": "Emergencias y hospitalización",
     "911": "Para cualquier emergencia fuera del horario de atención, llame al teléfono de la oficina y el servicio de contestador llamará al Dr. Sergiwa. Si su hijo experimenta alguno de los siguientes síntomas, vaya a la sala de emergencias más cercana o llame al 911:",
